# BioInfo-SynapseRX

./: .gitignore  README.md  compound_library_auto.sdf  docker-compose.yml  environment.yml  install_omegafold.sh  kg_library_auto.sdf  launch_code.txt  pyproject.toml  requirements.txt  run_auto_hypothesis_agent.py  run_bio_knowledge_miner.py  setup_pip_env.sh
Documents/: 2025년 기준 최신 AI 기반 바이오 신약 개발 프로세스.docxZone.Identifier  plan.txt  process_01.txt  test_topic.txt
auto_hypothesis_agent/: README.md  __init__.py  config.py  experiment_designer.py  hypothesis_generator.py  kg_interface.py  models.py  protocol_generator.py
auto_hypothesis_agent/optimization/: __init__.py  bo_optimizer.py
auto_hypothesis_agent/pipelines/: __init__.py  auto_hypothesis_pipeline.py  compound_screen_pipeline.py
auto_hypothesis_agent/reports/: __init__.py  reporter.py
auto_hypothesis_agent/resources/: baseline_compounds.csv  gene2cellline.csv  hgnc_symbols.txt
auto_hypothesis_agent/simulation/: __init__.py  admet_predictor.py  binding_energy.py  docking.py  evaluator.py  ligand_generator.py  md_runner.py
bio_knowledge_miner/: README.md  __init__.py  __main__.py  config.py  requirements.txt
bio_knowledge_miner/data_collection/: __init__.py  api_clients.py  crawler.py  ensembl_client.py  pdf_downloader.py  uniprot_client.py
bio_knowledge_miner/knowledge_graph/: __init__.py  graph_rag_query.py  kg_builder.py  neo4j_connector.py
bio_knowledge_miner/llm_services/: __init__.py  entity_extractor.py  summarizer.py
fpocket/scripts/: eval_PP_cheng.svl  (+3 more)
outputs/: KRAS_KRAS_G12C_0.pdbqt
(+61 files in other folders)
