[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-info"
version = "0.1.0"
description = "End-to-end AI-driven bioinformatics drug discovery pipeline"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Bio-Info Team" }]
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = [
    "auto_hypothesis_agent*",
    "bio_knowledge_miner*",
] 